<resources>
    <string name="app_name">CipherKart</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login_text">Login</string>
    <string name="usernameHintText">UserName</string>
    <string name="passwordHintText">Password</string>
    <string name="loginBtn">Login</string>
    <string name="cipher_kart_heading">CIPHER KART</string>
    <string name="new_user_click_here">new User?\nClick Here.</string>
    <string name="phone_number_string">Phone Number</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">UserName</string>
    <string name="please_register_below_text">Please register below:</string>
    <string name="submit_text">Submit</string>
    <string name="e_mail_hint">E-Mail</string>
    <string name="headingAtSplashScreen">C1PH3R Kart</string>
    <string name="textBelowHeadingSplashScreen">Get What you see 😉</string>
    <string name="productNameListText">ProductName</string>
    <string name="productListPriceText">Price</string>
    <string name="categories_string">Categories</string>
    <string name="smart_nPhonesCategoriesText">Mobiles</string>
    <string name="laptopCategoriesText">Laptop</string>
    <string name="fragrancesCategoriesText">Perfume</string>
    <string name="skin_CareCategoriesText">Skin\nCare</string>
    <string name="groceriesCategoriesText">Staples</string>
    <string name="home_DecorationCategoriesText">Home\nDecor</string>
    <string name="add_to_cart_btn_string">Add to Cart</string>
    <string name="dashboard_btn_text">Dashboard</string>
    <string name="all_products_btn_text">All Products</string>
    <string name="cart_btn_text">Cart</string>
    <string name="settings_btn_text">Settings</string>
    <string name="filter_Btn_text">Filter</string>
    <string name="brand_name">Brand:</string>
    <string name="product_name">Name:</string>
    <string name="product_description">Description:</string>
    <string name="product_discount">Discount:</string>
    <string name="products_ratings">Ratings:</string>
    <string name="searchFieldText">search</string>
    <string name="priceFieldText">Price:</string>
    <string name="do_you_want_to_add_this_product_to_your_cart_text">Do you want to add this product to your cart ?</string>
    <string name="product_text">Product:</string>
    <string name="add_btn_text">Add</string>
    <string name="cancel_text">cancel</string>
    <string name="laptop_string">laptop</string>
    <string name="clear_filters_btn">Clear Filters</string>
    <string name="filter_by_category_text">Filter By category:</string>
    <string name="sort_by_price_text">Sort By Price:</string>
    <string name="high_to_low_text">High To Low</string>
    <string name="low_to_high_text">Low To High</string>
    <string name="filter_options_text">Filter Options</string>
    <string name="by_discounts_text">By Discounts</string>
    <string name="apply_text">Apply</string>
    <string name="proceed_to_buy_btn_text">Proceed to Checkout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_number_text">Phone Number:</string>
    <string name="address_text">Address:</string>
    <string name="name_text">Name</string>
    <string name="confirm_text">Confirm</string>
    <string name="total_text">Total :</string>
    <string name="price_after_discount">Price After discount:</string>
    <string name="total_cost">Total Cost:</string>
    <string name="address">Address :</string>
    <string name="user_details_text">User Details</string>
    <string name="order_history_text">Order History</string>
    <string name="logout_text">Logout</string>
    <string name="choose_your_address_text">Choose your address:</string>
    <string name="add_new_address_btn_text">Add New Address</string>
    <string name="one_more_step_left_text">One More Step Left:</string>
    <string name="order_confirmation_text">Order Confirmation:</string>
    <string name="textview_price">TextView</string>
    <string name="textview_discountPrice">TextView</string>
    <string name="house_no">House No</string>
    <string name="streetName">StreetName</string>
    <string name="pin_code">Pin Code</string>
    <string name="state">State</string>
    <string name="add_new_address">Add New Address:</string>
    <string name="festival_sale_n_50_off">Festival Sale\n 50% off</string>
    <string name="useremail">userEmail</string>
    <string name="username">userName</string>
    <string name="login">logIn</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>