<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ConfirmOrder">


    <LinearLayout
        android:id="@+id/linearLayout4"
        android:padding="@dimen/padding12dp"
        android:layout_width="@dimen/CommonWidth"
        android:layout_height="@dimen/height580dp"
        android:orientation="vertical"
        android:background="@drawable/user_login_layout_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.198">


        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_confirmation_text"
            android:textColor="@color/color4"
            android:textSize="@dimen/text20sp"
            android:fontFamily="@font/josefin_sans_medium"/>


        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/value220dp"
            android:layout_marginTop="@dimen/value4dp"
            android:layout_marginBottom="@dimen/value4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/orderConfirmList"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/value220dp"
                    android:background="@drawable/recycle_viewer_background"
                    android:elevation="@dimen/value4dp"
                    android:padding="@dimen/value4dp" />
            </LinearLayout>
        </ScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView2"
            app:layout_constraintVertical_bias="0.5">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/value16dp"
                android:layout_marginTop="@dimen/value16dp"
                android:fontFamily="@font/josefin_sans_semi_bold"
                android:text="@string/total_cost"
                android:textColor="@color/color4"
                android:textSize="@dimen/normalTextSize"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/value4dp"
                android:layout_marginTop="@dimen/value16dp"
                android:fontFamily="@font/josefin_sans_regular"
                android:text="@string/textview_price"
                android:textColor="@color/ErrorRed"
                android:textSize="@dimen/normalTextSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.644"
                app:layout_constraintStart_toEndOf="@+id/textView9"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/value16dp"
                android:layout_marginTop="@dimen/value44dp"
                android:fontFamily="@font/josefin_sans_semi_bold"
                android:text="@string/address"
                android:textColor="@color/color4"
                android:textSize="@dimen/normalTextSize"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/addressConfirm"
                android:layout_width="@dimen/value220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin24dp"
                android:fontFamily="@font/josefin_sans_regular"
                android:textColor="@color/color4"
                android:textSize="@dimen/normalTextSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/josefin_sans_semi_bold"
                android:text="@string/price_after_discount"
                android:textColor="@color/color4"
                android:textSize="@dimen/normalTextSize"
                app:layout_constraintBottom_toTopOf="@+id/addressConfirm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.124"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/discountPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/josefin_sans_bold"
                android:text="@string/textview_discountPrice"
                android:textColor="@color/green"
                android:textSize="@dimen/normalTextSize"
                app:layout_constraintBottom_toTopOf="@+id/addressConfirm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.289"
                app:layout_constraintStart_toEndOf="@+id/textView14"
                app:layout_constraintTop_toBottomOf="@+id/price"
                app:layout_constraintVertical_bias="0.205" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirmOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_text"
        android:textColor="@color/white"
        android:fontFamily="@font/josefin_sans_medium"
        app:cornerRadius="@dimen/buttonCornerRadius"
        android:backgroundTint="@color/color4"
        android:elevation="@dimen/value6dp"
        android:textSize="@dimen/normalTextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cancelOrder"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="0.5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelOrder"
        android:textSize="@dimen/normalTextSize"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color4"
        app:cornerRadius="@dimen/buttonCornerRadius"
        android:fontFamily="@font/josefin_sans_medium"
        android:text="@string/cancel_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/confirmOrder"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>