<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/value320dp"
    android:layout_height="@dimen/value450dp"
    android:layout_gravity="center"
    android:background="@drawable/user_login_layout_background"
    tools:ignore="MissingDefaultResource">


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/cartAnim"
        android:layout_width="@dimen/splashScreenDimen"
        android:layout_height="@dimen/height110"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/cart_anim" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/value210dp"
        android:fontFamily="@font/josefin_sans_semi_bold"
        android:padding="@dimen/value8dp"
        android:text="@string/do_you_want_to_add_this_product_to_your_cart_text"
        android:textColor="@color/color4"
        android:textSize="@dimen/headingTextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cartAnim"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/productNameCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/value156dp"
        android:fontFamily="@font/josefin_sans_medium"
        android:padding="@dimen/value4dp"
        android:text="@string/product_text"
        android:textColor="@color/color3"
        android:textSize="@dimen/normalTextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cartAnim"
        app:layout_constraintVertical_bias="0.963" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addToCartBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_btn_text"
        android:textColor="@color/white"
        app:backgroundTint="@color/color3"
        app:cornerRadius="@dimen/buttonCornerRadius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.931"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.916" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_text"
        android:textColor="@color/white"
        app:backgroundTint="@color/color3"
        app:cornerRadius="@dimen/buttonCornerRadius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.921" />

</androidx.constraintlayout.widget.ConstraintLayout>