<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/width280dp"
        app:cardCornerRadius="@dimen/value16dp"
        android:padding="@dimen/padding10dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@drawable/address_background"
            android:padding="@dimen/value8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/josefin_sans_semi_bold"
                android:text="@string/name_text"
                android:textColor="@color/color4"
                android:textSize="@dimen/normalTextSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.069"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/value4dp"
                android:fontFamily="@font/josefin_sans_medium"
                android:text="@string/address_text"
                android:textColor="@color/color4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.07"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Name" />

            <TextView
                android:id="@+id/Address"
                android:layout_width="@dimen/width180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/value4dp"
                android:text=""
                android:textSize="@dimen/normalTextSize"
                android:textColor="@color/color3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/value4dp"
                android:fontFamily="@font/josefin_sans_medium"
                android:text="@string/phone_number_text"
                android:textColor="@color/color4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.13"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Address" />

            <TextView
                android:id="@+id/phoneNumber"
                android:layout_width="@dimen/width180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/value6dp"
                android:textColor="@color/color3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView19"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>